--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <main>
-        <h1>MIA Maui</h1>
-        <p>This is a test site for the Missing Maui people from the Lahaina Town fires.</p>
+<center>MIA Maui</center>
+<pre>
+This is a test site for the Missing Maui people from the Lahaina Town fires
+</pre>
     </main>
   </body>
 </html>
