--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MIA Maui</title>
+    <meta http-equiv="refresh" content="0; url='index.pdf'" />
   </head>
   <body>
-    <main>
-<center>MIA Maui</center>
-<pre>
-This is a test site for the Missing Maui people from the Lahaina Town fires
-</pre>
-    </main>
+    <p>You will be redirected soon!</p>
   </body>
 </html>
