--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='index.pdf'" />
+    <meta http-equiv="refresh" content="0; url='names.pdf'" />
   </head>
   <body>
     <p>You will be redirected soon!</p>
