--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='names.pdf'" />
+    <meta http-equiv="refresh" content="0; url='names.html'" />
   </head>
   <body>
-    <p>You will be redirected soon!</p>
+    <p>You will be redirected soon to an cached copy soon!</p>
   </body>
 </html>
