--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url='Names.html'" />
   </head>
   <body>
-    <p>You will be redirected soon to an cached copy soon!</p>
+    <p>You will be redirected soon to a view only copy soon!</p>
   </body>
 </html>
